@@ -1,6 +1,6 @@
 name    = Flux
 abstract = core flux interfaces
-version = 1.01
+version = 1.02
 author  = Vyacheslav Matyukhin <me@berekuk.ru>
 license = Perl_5
 copyright_holder = Yandex LLC
