@@ -1,6 +1,7 @@
 Revision history for Flux
 
 {{$NEXT}}
+    * Flux::Storage::Memory: don't advance client position on undef reads
 
 1.01    2013-04-13
     * Flux::Format
